# JetsonBigBrother

./: .gitignore  CMakeLists.txt  README.md  main.cpp
face_detection/: cvgraph.pbtxt
face_identification/: model-caffe.caffemodel  model-caffe.prototxt
include/: Person.h  Process.h  thread_utility.h
src/: Person.cpp  Process.cpp  thread_utility.cpp
